Using local storage instead of a cookie to store current sorting state on main page

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -135,7 +135,7 @@
 </script>
 
 {% javascripts filter='?yui_js'
-    'bundles/knpbundles/js/jquery.cookie.min.js'
+    'bundles/knpbundles/js/jstorage.min.js'
     'bundles/knpbundles/js/jquery.hotkeys.js'
     'bundles/knpbundles/js/jquery-ui.min.js'
     'bundles/knpbundles/js/bootstrap.min.js'
