--- a/src/Knp/Bundle/SitemapBundle/Resources/views/Url/user.xml.twig
+++ b/src/Knp/Bundle/SitemapBundle/Resources/views/Url/user.xml.twig
@@ -1,3 +1,3 @@
-<loc>{{ path('user_show', {'name': user.name})|kb_sitemap_url_absolute }}</loc>
+<loc>{{ path('developer_show', {'name': user.name})|kb_sitemap_url_absolute }}</loc>
 <lastmod>{{ user.createdAt|kb_sitemap_date }}</lastmod>
 <changefreq>weekly</changefreq>
