--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -84,7 +84,7 @@
     <section>
         <section id="copyrights">
             <h2><a href="http://knplabs.com/" hreflang="en"><img src="{{ asset('bundles/knpbundles/images/knp_logo.png') }}" alt="KnpBundles"></a></h2>
-            <p>Copyright &copy; 2012 <a href="http://knplabs.com/" hreflang="en"><strong>KnpBundles.com</strong></a><br>All rights reserved</p>
+            <p>Copyright &copy; {{ "now"|date('Y') }} <a href="http://knplabs.com/" hreflang="en"><strong>KnpBundles.com</strong></a><br>All rights reserved</p>
 
             <ul>
                 <li><a href="http://knplabs.com/" hreflang="en">KnpLabs World</a></li>
