--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -32,6 +32,11 @@
 <body{% block body_attributes %}{% endblock %}>
 
 <header id="page-header">
+
+     <div id="bannerConsent">
+        A new version of KNP Bundles is coming! <a href="http://knplabs.com/fr/contact" target="_blank" rel="noopener noreferrer">Contact KNPLabs</a> if you want to become a beta tester.
+     </div>
+
     <section>
         <h1 id="logo"><a href="{{ path('bundle_list') }}"><img src="{{ asset('bundles/knpbundles/images/logo.gif') }}" alt="KnpBundles"></a></h1>
 
